# TUM-CalProxy

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build_and_deploy.yaml
data/: buildings.json  courses.json
data-macro/: Cargo.toml
data-macro/src/: building_matcher.rs  common.rs  course_name_replacer.rs  lib.rs
project/: Cargo.toml
project/src/: https.rs  init.rs  main.rs  utils.rs
project/src/calendar/: event_type.rs  fetch.rs  mod.rs  utils.rs
project/src/error/: calendar_error.rs  internal_server_error.rs  method_not_available.rs  mod.rs  not_found.rs  query_error.rs
project/src/handlers/: cal.rs  health.rs  mod.rs  static_files.rs
static/: index.html
