[package]
name = "tum-cal-proxy"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
data-macro = { path = "../data-macro" }
ical = "0.9"
icalendar = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version= "0.14", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.24", features = ["http1", "http2"] }
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
lazy-regex = "3.0"