[package]
name = "tum-cal-proxy"
version = "0.1.3"
edition = "2021"
publish = false

[dependencies]
data-macro = { path = "../data-macro" }
ical = "0.11"
icalendar = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = "0.13"
actix-web = "4.13"
serde = { version = "1.0", features = ["derive"] }
regex = "1.12"
lazy-regex = "3.6"